--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ keepalived:
   environment:
     - VIRTUAL_IP=172.17.8.150
     - CHECK_PORT=80
+    - VRID=150
   tty: true
   build: docker-keepalived
   stdin_open: true
