--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -3,7 +3,7 @@
         vrrp_version 2
         vrrp_garp_master_delay 1
         vrrp_garp_master_refresh
-        #vrrp_mcast_group4 224.0.1.NNN	
+        #vrrp_mcast_group4 224.0.0.{{VRID}}	
     }   
 
     vrrp_script chk_haproxy {
@@ -17,7 +17,7 @@
     vrrp_instance lb-vips {
         state BACKUP
         interface eth0
-        virtual_router_id 51
+        virtual_router_id {{VRID}}
         priority 100
         advert_int 1
         nopreempt
@@ -29,6 +29,6 @@
             auth_pass blahblah
         }
         virtual_ipaddress {
-            {{VIRTUAL_IP}}/24 dev eth0
+            {{VIRTUAL_IP}}/24 dev {{INTERFACE}}
         }
     } 
