Make vrrp check more general

--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -7,7 +7,7 @@
     }   
 
     vrrp_script chk_haproxy {
-        script       "ss -ltn 'src {{VIRTUAL_IP}}' | grep {{CHECK_PORT}}"
+        script       "ss -ltn 'src :' | grep {{CHECK_PORT}}"
         timeout 1
         interval 1   # check every 1 second
         fall 2       # require 2 failures for KO
