Implemented AUTH_PASS environment variable

--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -26,7 +26,7 @@
         }
         authentication {
             auth_type PASS
-            auth_pass blahblah
+            auth_pass {{AUTH_PASS}}
         }
         virtual_ipaddress {
             {{VIRTUAL_IP}}/24 dev {{INTERFACE}}
