Changed authentication type from PASS to AH, for security reasons

--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -25,7 +25,7 @@
             chk_haproxy
         }
         authentication {
-            auth_type PASS
+            auth_type AH
             auth_pass {{AUTH_PASS}}
         }
         virtual_ipaddress {
