--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -1,13 +1,14 @@
     global_defs {
-        router_id 10
+        router_id your_hostname
         vrrp_version 2
         vrrp_garp_master_delay 1
         vrrp_garp_master_refresh
+        #Uncomment the next line if you'd like to use unique multicast groups
         #vrrp_mcast_group4 224.0.0.{{VRID}}	
     }   
 
     vrrp_script chk_haproxy {
-        script       "ss -ltn 'src {{VIRTUAL_IP}}' | grep {{CHECK_PORT}}"
+        script       "ss -ltn 'src {{CHECK_IP}}' | grep {{CHECK_PORT}}"
         timeout 1
         interval 1   # check every 1 second
         fall 2       # require 2 failures for KO
@@ -29,6 +30,6 @@
             auth_pass blahblah
         }
         virtual_ipaddress {
-            {{VIRTUAL_IP}}/24 dev {{INTERFACE}}
+            {{VIRTUAL_IP}}/{{VIRTUAL_MASK}} dev {{INTERFACE}}
         }
     } 
