--- a/docker-keepalived/Dockerfile
+++ b/docker-keepalived/Dockerfile
@@ -1,8 +1,9 @@
 FROM alpine:latest
 
-
-RUN echo "http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && apk --update -t add keepalived iproute2 grep bash tcpdump sed && rm -f /var/cache/apk/* /tmp/*
-
+RUN echo "http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && \
+    echo "http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
+    apk --update -t add keepalived iproute2 grep bash tcpdump sed && \
+    rm -f /var/cache/apk/* /tmp/*
 
 COPY keepalived.sh /usr/bin/keepalived.sh
 COPY keepalived.conf /etc/keepalived/keepalived.conf
