Change check script and make it customizable

--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -4,16 +4,16 @@
         vrrp_garp_master_delay 1
         vrrp_garp_master_refresh
         #Uncomment the next line if you'd like to use unique multicast groups
-        #vrrp_mcast_group4 224.0.0.{{VRID}}	
-    }   
+        #vrrp_mcast_group4 224.0.0.{{VRID}}
+    }
 
     vrrp_script chk_haproxy {
-        script       "ss -ltn 'src {{CHECK_IP}}' | grep ':{{CHECK_PORT}} '"
+        script       "{{CHECK_SCRIPT}}"
         timeout 1
         interval 1   # check every 1 second
         fall 2       # require 2 failures for KO
         rise 2       # require 2 successes for OK
-    }   
+    }
 
     vrrp_instance lb-vips {
         state BACKUP
@@ -32,4 +32,4 @@
         virtual_ipaddress {
             {{VIRTUAL_IP}}/{{VIRTUAL_MASK}} dev {{INTERFACE}}
         }
-    } 
+    }
