--- a/docker-keepalived/Dockerfile
+++ b/docker-keepalived/Dockerfile
@@ -1,9 +1,13 @@
-FROM alpine:3.4
+FROM alpine:3.8
+LABEL maintainer "Neoassist <info@neoassist.com> and Steven Iveson <steve@iveson.eu>"
+LABEL source "https://github.com/NeoAssist/docker-keepalived"
+LABEL branch "master"
+COPY Dockerfile /Dockerfile
+COPY .bashrc /root/.bashrc
 
-RUN echo "http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-    echo "http://nl.alpinelinux.org/alpine/edge/main" >> /etc/apk/repositories && \
-    apk --update -t add keepalived iproute2 grep bash tcpdump sed && \
-    rm -f /var/cache/apk/* /tmp/*
+RUN apk --update -t add keepalived iproute2 grep bash tcpdump sed && \
+    rm -f /var/cache/apk/* /tmp/* && \
+    rm -f /sbin/halt /sbin/poweroff /sbin/reboot
 
 COPY keepalived.sh /usr/bin/keepalived.sh
 COPY keepalived.conf /etc/keepalived/keepalived.conf
