--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -1,10 +1,12 @@
     global_defs {
-        router_id your_hostname
+        #Hostname will be used by default
+        #router_id your_name
         vrrp_version 2
         vrrp_garp_master_delay 1
-        vrrp_garp_master_refresh
+        vrrp_garp_master_refresh 60
         #Uncomment the next line if you'd like to use unique multicast groups
         #vrrp_mcast_group4 224.0.0.{{VRID}}
+        script_user root
     }
 
     vrrp_script chk_haproxy {
@@ -21,7 +23,7 @@
         virtual_router_id {{VRID}}
         priority 100
         advert_int 1
-        nopreempt
+        nopreempt #Prevent fail-back
         track_script {
             chk_haproxy
         }
