Add enable_script_security parameter and have check script owned by route. Update to alpine 3.8. Replace wait commands with more widely supported commands.

--- a/docker-keepalived/Dockerfile
+++ b/docker-keepalived/Dockerfile
@@ -12,6 +12,6 @@ RUN apk --update -t add keepalived iproute2 grep bash tcpdump sed && \
 COPY keepalived.sh /usr/bin/keepalived.sh
 COPY keepalived.conf /etc/keepalived/keepalived.conf
 
-RUN chmod +x /usr/bin/keepalived.sh
+RUN chmod +x /usr/bin/keepalived.sh; chown root:root /usr/bin/keepalived.sh
 
 ENTRYPOINT ["/usr/bin/keepalived.sh"]
