--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -7,6 +7,7 @@
         #Uncomment the next line if you'd like to use unique multicast groups
         #vrrp_mcast_group4 224.0.0.{{VRID}}
         script_user root
+        enable_script_security
     }
 
     vrrp_script chk_haproxy {
