Support injection of more env vars

--- a/docker-keepalived/keepalived.conf
+++ b/docker-keepalived/keepalived.conf
@@ -19,11 +19,11 @@
     }
 
     vrrp_instance lb-vips {
-        state BACKUP
+        state {{STATE}}
         interface {{INTERFACE}}
         virtual_router_id {{VRID}}
-        priority 100
-        advert_int 1
+        priority {{PRIORITY}}
+        advert_int {{ADVERT_INT}}
         nopreempt #Prevent fail-back
         track_script {
             chk_haproxy
@@ -34,5 +34,9 @@
         }
         virtual_ipaddress {
             {{VIRTUAL_IP}}/{{VIRTUAL_MASK}} dev {{INTERFACE}}
+        }
+        unicast_src_ip {{UNICAST_SRC_IP}}
+        unicast_peer {
+            {{UNICAST_PEERS}}
         }
     }
